# whale-shark-site

./: .gitignore  CNAME  Makefile  README.md  brainstorm.txt  index.html  package-lock.json  pyproject.toml
assets/: About--WQhOTX9.js  About-51zzAvSb.js  About-B2Hpjxab.js  About-B4_RQbC_.js  About-B79IOtc6.js  About-BGBKUHrn.js  About-BHijw9Tp.js  About-BSYjaGGJ.js  About-BXqSFEUI.css  About-Bg7geRAw.js  About-BgsC8Niw.js  About-BhnrIjwi.js  About-BjOvdR5B.js  About-BqnzQAa9.js  About-BzeeAasl.js  About-C2tLJK0F.js  About-C4TxaZo1.js  About-C6CsVKEh.js  About-C786xP-q.js  About-CQvi9KJQ.js  About-CSX3r8RH.js  About-CY7VU_4T.js  About-C_Ykrtf5.css  About-Cc7qXIJm.js  About-Cd0HxA5w.js  About-Cd1RjZnS.js  About-CgLiKn23.js  About-ChufiuT5.js  About-Cu46jbMN.js  About-Cv2X9ZGJ.js  About-D0LdeGQE.js  About-D0Un_eVQ.js  About-DEKaf9ZP.js  About-DJ9FrZmp.js  About-DJPm9AUG.js  About-DJvOiM04.js  About-DNFK_wIB.js  About-DNW5jNHd.js  About-DO3TKz5L.js  About-DRchZFfm.js  (+893 more)
computer-vision/: CONSTANTS.py  README.md  assess_shark_match_plausibility.py  build_graph.py  calculate_coordinate_distance.py  coco_to_yolo.py  extract-tar-data.py  extract_tar_data.py  generate_vision_examples.py  get_new_image_embeddings.py  handle_yolo_model.py  match_embeddings.py  match_plausible_embeddings.py  process_annotations.py  shark_plausibility.py  validate_embeddings.py
computer-vision/matches-graph/: README.md  build_graph.py  render_graph.py
computer-vision/shark-ranking/: build_shark_graph.py  compare_shark_pairs.py  find_candidates.py  rank_shark_matches.py
computer-vision/utils/: embedding_utils.py
computer_vision/: README.md  root_constants.py
computer_vision/one_offs/: generate_vision_examples.py  get_new_image_embeddings.py  one_offs_constants.py
computer_vision/plausible_matching/: build_graph.py  (+2 more)
outputs/: gbif_calendar_stats.csv  gbif_continent_stats.csv  gbif_country_stats.csv  gbif_individual_sharks_stats.csv  gbif_media_sharks.csv  gbif_publishingCountry_stats.csv  gbif_story_shark_images.csv  gbif_story_sharks.csv  gbif_story_sharks_named.csv
src/: config.py
website/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
(+1651 files in other folders)
