[project]
name = "whale-shark-site"
version = "0.1.0"
description = "A data project for whale shark research"
authors = [
    {name = "Adrien Lynch",email = "adriienlynch@gmail.com"}
]
readme = "README.md"
packages = [
    { include = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
pandas = "^2.2.3"
country-converter = "^1.3"
ollama = "^0.4.8"
diffusers = "^0.33.1"
transformers = "^4.51.3"
pillow = "^11.2.1"
torch = "2.1.1"
numpy = "^1.24.0"
accelerate = "^1.6.0"
torchvision = "0.16.1"
timm = "^1.0.15"
ultralytics = "^8.3.121"
faiss-cpu = "^1.11.0"
pycountry-convert = "^0.7.2"
copernicusmarine = "^2.1.3"
python-dotenv = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
